# NRS

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  TODO  TODO-threads  TODO-variables  configure.ac
Base/: ArgumentDirector.cc  ArgumentFielder.cc  BufferedInterface.cc  CSLParser.cc  CSLVariableManager.cc  Callback.cc  CallbackDirector.cc  DummyLibrary.cc  DummyPluginDirector.cc  Encoding.cc  Exception.cc  Executive.cc  ExternalInterface.cc  ExternalInterfaceDirector.cc  ExternalInterfaceHandler.cc  FileInterface.cc  IntelligentStore.cc  Limit.cc  Link.cc  Location.cc  Makefile.am  MemoryRepository.cc  Message.cc  MessageDescription.cc  MessageFunctionObject.cc  MessageParser.cc  MessageStore.cc  Node.cc  NodeFactory.cc  Observable.cc  Plugin.cc  PluginDirector.cc  Restriction.cc  Segment.cc  SegmentDescription.cc  SocketInterface.cc  SpecialisedMFO.cc  StringLiterals.cc  Target.cc  Variable.cc  (+3 more)
Message/: Activate.cc  AttributeLiterals.hh  CreateLink.cc  CreateLinkManager.cc  CreateNode.cc  CreateNodeManager.cc  DeleteLink.cc  DeleteLinkManager.cc  DeleteNode.cc  DeleteNodeManager.cc  Error.cc  ErrorManager.cc  MainLoop.cc  MainLoopMFO.cc  MainLoopManager.cc  Makefile.am  MessageSender.cc  MessageSenderMFO.cc  MessageSenderManager.cc  QueryCID.cc  QueryCIDManager.cc  QueryCSL.cc  QueryCSLManager.cc  QueryCType.cc  QueryCTypeManager.cc  QueryLanguage.cc  QueryLanguageManager.cc  QueryLog.cc  QueryLogManager.cc  QueryManager.cc  QueryMaxLog.cc  QueryMaxLogManager.cc  QueryMaxPort.cc  QueryMaxPortManager.cc  QueryMaxVNID.cc  QueryMaxVNIDManager.cc  QueryNumLog.cc  QueryNumLogManager.cc  QueryNumberType.cc  QueryNumberTypeManager.cc  (+48 more)
NSim/: Axon.cc  Axon.hh  AxonFactory.cc  AxonManager.cc  AxonSpike.cc  AxonSpike.hh  BooleanEnvelope.cc  BooleanEnvelope.hh  BooleanEnvelopeBoolean.cc  BooleanEnvelopeBoolean.hh  BooleanEnvelopeFactory.cc  BooleanEnvelopeManager.cc  ConductanceBasedSynapse.cc  ConductanceBasedSynapse.hh  ConductanceBasedSynapseFactory.cc  ConductanceBasedSynapseGActual.cc  ConductanceBasedSynapseGActual.hh  ConductanceBasedSynapseManager.cc  ConductanceBasedSynapseOutput.cc  ConductanceBasedSynapseOutput.hh  Counter.cc  Counter.hh  CounterFactory.cc  CounterManager.cc  Evaluation.cc  Evaluation.hh  Evaluator.cc  Evaluator.hh  EvaluatorFactory.cc  EvaluatorManager.cc  Event.cc  Event.hh  EventManager.cc  EventManager.hh  FullSpeedTimerFactory.cc  FullSpeedTimerManager.cc  Makefile.am  NSim.cc  NSim.hh  NSimFactory.cc  (+59 more)
Type/: BVectorSegment.cc  Boolean.cc  BooleanManager.cc  BooleanSegment.cc  FVectorSegment.cc  Float.cc  FloatManager.cc  FloatRestriction.cc  FloatSegment.cc  IVectorSegment.cc  Integer.cc  IntegerManager.cc  IntegerRestriction.cc  IntegerSegment.cc  Makefile.am  Route.cc  RouteManager.cc  RouteSegment.cc  String.cc  StringManager.cc  StringRestriction.cc  StringSegment.cc  VectorRestriction.cc  Void.cc  VoidManager.cc
Unit/: Capacitance.cc  CapacitanceManager.cc  Compass.cc  CompassManager.cc  Conductance.cc  ConductanceManager.cc  Current.cc  CurrentManager.cc  Filename.cc  FilenameManager.cc  Frequency.cc  FrequencyManager.cc  Makefile.am  Time.cc  TimeManager.cc  Token.cc  TokenManager.cc  VNName.cc  VNNameManager.cc  Voltage.cc  VoltageManager.cc
component/: Makefile.am  component.cc  test.cc
doc/: Makefile.am  NRS-Sim.dia  NRS.bib  NRS.tex  NRScplusplus.tex  NRSdatalogger.tex  NRSga.tex  NRSwrapper.tex  bmf_message.dia  example-sim.dia  ga_NRSga.dia  ga_hierarchy.dia  ga_prog_flow.dia  global_var.dia  java_comms_classes.dia  java_fifo_to_message.dia  java_inbound_routing.dia  node-internals.dia  nrsgui_basecompnode_internal.dia  nrsgui_component_classes.dia  route_building.dia  route_striping.dia
download/: Makefile.am  download.cc  gen_binary.cc
doxygen/: Doxyfile  Makefile.am
nrs/: HOWTO_Add_New_Java_Script_To_Build_System.txt  HOWTO_JavaComponent.txt  Makefile.am
nrs/audio/: Makefile.am
nrs/calculation/: AppManager.java  BooleanConversionNode.java  BooleanNode.java  CalculationComponent.java  CalculationNode.java  DelayNode.java  DeltaNode.java  FloatCondNode.java  FloatConversionNode.java  FloatNode.java  ForLoopNode.java  IntCondNode.java  IntConversionNode.java  IntNode.java  LatchNode.java  Makefile.am  NOTNode.java  PackageLogger.java  StringConcatNode.java  StringConversionNode.java  VoidToBooleanDelayNode.java  VoidToBooleanNode.java  nrscalculation.java  package.html
nrs/composer/: AppManager.java  ComposerComponent.java  FieldEntry.java  MainFrame.java  Makefile.am  MessageInterceptor.java  PackageLogger.java  composer.xml  nrscomposer.java  package.html
nrs/control/: AppManager.java  ButtonNode.java  ButtonNodeManager.java  CheckBoxNode.java  CheckBoxNodeManager.java  ControlComponent.java  ControlNode.java  FloatButtonNode.java  FloatButtonNodeManager.java  FloatDisplayNode.java  FloatDisplayNodeManager.java  IntegerButtonNode.java  IntegerButtonNodeManager.java  IntegerDisplayNode.java  IntegerDisplayNodeManager.java  LEDNode.java  LEDNodeManager.java  MainFrame.java  Makefile.am  PackageLogger.java  StringButtonNode.java  StringButtonNodeManager.java  StringDisplayNode.java  StringDisplayNodeManager.java  TimeButtonNode.java  TimeButtonNodeManager.java  nrscontrol.java  package-list  package.html
nrs/core/: Makefile.am
nrs/csl/: CSL_BasicType.java  CSL_BasicType_Boolean.java  CSL_BasicType_Float.java  CSL_BasicType_Integer.java  CSL_BasicType_Route.java  CSL_BasicType_String.java  CSL_BasicType_Void.java  CSL_ContentReader.java  CSL_Element.java  CSL_Element_Attribute.java  CSL_Element_Constraint.java  CSL_Element_Contains.java  CSL_Element_Description.java  CSL_Element_FloatInfo.java  Makefile.am  (+26 more)
robot/: Makefile.am  adc.c  adc.h  atmel.c  atmel.h  auxiliar.h  bandpass.c  bandpass.h  comm.c  comm.h  creates.c  creates.h  delta.c  delta.h  earsys.c  earsys.h  integrator.c  integrator.h  ir.c  ir.h  kh2.c  kh2.h  khepera_compatibility.h  led.c  led.h  link.c  link.h  main.c  makefile  memory.c  memory.h  motor.c  motor.h  nrscomm.c  nrscomm.h  nrstools.c  nrstools.h  odometer.c  odometer.h  offsetgain.c  (+13 more)
(+992 files in other folders)
