# Copyright (C) 2004 Richard Reeve, Darren Smith, Matthew Szenher
#                    and Edinburgh University
#
#    This program is free software; you can redistribute it and/or
#    modify it under the terms of the GNU General Public License as
#    published by the Free Software Foundation; either version 2 of
#    the License, or (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public
#    License along with this program; if not, write to the Free
#    Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
#    MA 02111-1307 USA
#
# For further information in the first instance contact:
# Richard Reeve <richardr@inf.ed.ac.uk>

lib_LTLIBRARIES = libMessages.la
libMessages_la_SOURCES =  Activate.cc \
	MainLoop.cc MainLoopManager.cc MainLoopMFO.cc \
	Updater.cc UpdaterManager.cc UpdaterMFO.cc \
	MessageSender.cc MessageSenderManager.cc MessageSenderMFO.cc \
	QueryVNID.cc QueryVNIDManager.cc \
	ReplyVNID.cc ReplyVNIDManager.cc \
	QueryVNType.cc QueryVNTypeManager.cc \
	ReplyVNType.cc ReplyVNTypeManager.cc \
	QueryRoute.cc QueryRouteManager.cc \
	ReplyRoute.cc ReplyRouteManager.cc \
	QueryCID.cc QueryCIDManager.cc \
	ReplyCID.cc ReplyCIDManager.cc \
	QueryCType.cc QueryCTypeManager.cc \
	ReplyCType.cc ReplyCTypeManager.cc \
	QueryCSL.cc QueryCSLManager.cc \
	ReplyCSL.cc ReplyCSLManager.cc \
	QueryMaxPort.cc QueryMaxPortManager.cc \
	ReplyMaxPort.cc ReplyMaxPortManager.cc \
	QueryPort.cc QueryPortManager.cc \
	ReplyPort.cc ReplyPortManager.cc \
	CreateNode.cc CreateNodeManager.cc \
	DeleteNode.cc DeleteNodeManager.cc \
	CreateLink.cc CreateLinkManager.cc \
	DeleteLink.cc DeleteLinkManager.cc \
	QueryVNName.cc QueryVNNameManager.cc \
	ReplyVNName.cc ReplyVNNameManager.cc \
	QueryMaxVNID.cc QueryMaxVNIDManager.cc \
	ReplyMaxVNID.cc ReplyMaxVNIDManager.cc

# 	QueryLanguage.cc QueryLanguageManager.cc \
# 	ReplyLanguage.cc ReplyLanguageManager.cc \
# 	QueryNumberType.cc QueryNumberTypeManager.cc \
# 	ReplyNumberType.cc ReplyNumberTypeManager.cc \
# 	QueryMaxLog.cc QueryMaxLogManager.cc \
# 	ReplyMaxLog.cc ReplyMaxLogManager.cc \
# 	QueryLog.cc QueryLogManager.cc \
# 	ReplyLog.cc ReplyLogManager.cc \
# 	Reset.cc ResetManager.cc \
# 	Error.cc ErrorManager.cc \
# 	SetErrorRoute.cc SetErrorRouteManager.cc

#libMessages_la_LDFLAGS = -static
INCLUDES = -I$(top_srcdir)/include
SUBDIRS =
